--- a/src/pages/login/login-page.module.css
+++ b/src/pages/login/login-page.module.css
@@ -5,24 +5,21 @@
 }
 
 .form {
-    width: var(--login-form-width);
-    height: var(--login-form-height);
+    width: min-content;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 48px;
-    padding: 80px;
-    margin: 0 auto;
+    gap: 40px;
+    padding: 68px;
+    margin: 76px auto 0 auto;
     background-color: var(--background-color-white);
-    position: absolute;
-    left: calc((100% - 520px) / 2);
-    top: calc((100% - 530px) / 2);
+    /* margin: 0 auto; */
     color: var(--text-color);
     border-radius: 24px;
 }
 
 .title {
-    width: 100%;
+    width: 360px;
     text-align: center;
     font-size: var(--text-h1-size);
     line-height: var(--text-h1-height);
@@ -31,7 +28,7 @@
 }
 
 .inputs {
-    width: 100%;
+    width: 360px;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -45,6 +42,7 @@
     gap: 4px;
     font-size: var(--text-b2-size);
     line-height: var(--text-b2-height);
+    position: relative;
 }
 
 .input {
@@ -61,13 +59,17 @@ input::placeholder {
     color: var(--additional-not-selected);
 }
 
+.input:focus {
+    color: var(--text-color);
+    border-color: var(--additonal-stroke);
+}
+
 .button {
     border: none;
     background-color: var(--accent-normal);
     color: white;
     padding: 12px 0;
-    margin: 0 auto;
-    width: 100%;
+    width: 360px;
     font-size: var(--text-b1-size);
     line-height: var(--text-b1-height);
     font-weight: 500;
@@ -77,5 +79,28 @@ input::placeholder {
 .button:disabled {
     background-color: var(--background-color-gray);
     color: var(--additional-not-selected);
+}
 
+.info {
+    font-size: var(--text-b3-size);
+    line-height: var(--text-b3-height);
+    text-align: center;
+    color: var(--accent-normal);
+    width: 360px;
+    margin: 0;
+    padding: 0;
+}
+
+.icon {
+    width: 24px;
+    aspect-ratio: 1 / 1;
+    position: absolute;
+    right: 16px;
+    top: 38px;
+}
+
+.error {
+    margin: 0;
+    position: absolute;
+    top: 75px;
 }
