--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,18 @@ a {
   text-decoration: none;
   color: var(--text-color);
 }
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
