--- a/src/components/tabMenu/tabMenu.module.css
+++ b/src/components/tabMenu/tabMenu.module.css
@@ -1,9 +1,33 @@
 .sidebar {
     padding: 48px 20px 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .list {
     display: flex;
     flex-direction: column;
     gap: 16px;
+}
+
+.signout {
+    width: 200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 0;
+    gap: 10px;
+    cursor: pointer;
+    color: var(--color-secondary-normal);
+    font-weight: 500;
+    font-size: var(--text-b1-size);
+    line-height: var(--text-b1-height);
+    position: fixed;
+    bottom: 24px;
+}
+
+.signout svg path {
+    fill: var(--color-secondary-normal);
 }
