--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@
   --accent-normal: #E10D34;
   --additional-not-selected: #86878C;
   --additonal-stroke: #E0E0E0;
+  --color-secondary-normal: #2E4289;
   --text-h1-size: 32px; 
   --text-h1-height: 46px; 
   --text-h2-size: 24px; 
@@ -81,6 +82,7 @@ a {
 ul {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 button {
