small color fixes

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,4 +1,4 @@
 .layout {
     height: 100vh;
-    background-color: var(--background-color-light-gray);
+    background-color: var(--color-fill);
 }
