--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     margin: 0 auto;
     height: 60px;
-    background-color: var(--background-color-light-gray);
+    background-color: var(--color-light-gray);
 }
 
 .content {
@@ -42,7 +42,7 @@
     gap: 8px;
     align-items: center;
     padding: 0 4px;
-    background-color: var(--background-color-white);
+    background-color: var(--color-white);
     height: 100%;
     border-radius: 8px;
 }
@@ -67,7 +67,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--background-color-white);
+    background-color: var(--color-white);
     height: 100%;
     border-radius: 8px;
 }
