--- a/src/components/tabMenu/tab/tab.module.css
+++ b/src/components/tabMenu/tab/tab.module.css
@@ -9,7 +9,7 @@
     border: 1px solid var(--additonal-stroke);
     border-radius: 8px;
     cursor: pointer;
-    background-color: var(--background-color-white);
+    background-color: var(--color-white);
 }
 
 .name {
@@ -26,7 +26,7 @@
 
 .checked {
     border: none;
-    background-color: var(--text-color);
+    background-color: var(--main-color);
     box-shadow: 0px 9px 28px 8px #0000000D,
                 0px 6px 16px 0px #00000014,
                 0px 3px 6px -4px #0000001F;
