--- a/src/components/tabMenu/tabMenu.module.css
+++ b/src/components/tabMenu/tabMenu.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: var(--color-white);
 }
 
 .list {
