--- a/src/pages/login/login-page.module.css
+++ b/src/pages/login/login-page.module.css
@@ -1,5 +1,5 @@
 .content {
-    background-color: var(--background-color-gray);
+    background-color: var(--color-gray);
     height: 100vh;
     font-weight: 400;
 }
@@ -12,9 +12,9 @@
     gap: 40px;
     padding: 68px;
     margin: 76px auto 0 auto;
-    background-color: var(--background-color-white);
+    background-color: var(--color-white);
     /* margin: 0 auto; */
-    color: var(--text-color);
+    color: var(--main-color);
     border-radius: 24px;
 }
 
@@ -60,7 +60,7 @@ input::placeholder {
 }
 
 .input:focus {
-    color: var(--text-color);
+    color: var(--main-color);
     border-color: var(--additonal-stroke);
 }
 
@@ -77,7 +77,7 @@ input::placeholder {
 }
 
 .button:disabled {
-    background-color: var(--background-color-gray);
+    background-color: var(--color-gray);
     color: var(--additional-not-selected);
 }
 
