--- a/src/pages/teams/teams-page.module.css
+++ b/src/pages/teams/teams-page.module.css
@@ -8,8 +8,8 @@
 
 .info {
     padding: 48px 40px 0 40px;
-    width: 100vw;
-    background-color: var(--background-color-white);
+    max-width: 1120px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -57,7 +57,7 @@
     width: 100%
 }
 
-.bottom {
+.summary {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -65,13 +65,3 @@
     gap: 24px;
 }
 
-.sum {
-    width: 214px;
-    padding: 24px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 4px;
-    background-color: var(--background-color-white);
-    border-radius: 12px;
-}
