created TeamCard and updated TeamsPage

--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,7 @@
   --additional-not-selected: #86878C;
   --additonal-stroke: #E0E0E0;
   --color-secondary-normal: #2E4289;
+  --system-background: #EAEEFD;
   --text-h1-size: 32px; 
   --text-h1-height: 46px; 
   --text-h2-size: 24px; 
