--- a/src/pages/teams/teams-page.module.css
+++ b/src/pages/teams/teams-page.module.css
@@ -65,3 +65,11 @@
     gap: 24px;
 }
 
+.cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+    gap: 24px;
+}
