--- a/src/components/tabMenu/tab/tab.module.css
+++ b/src/components/tabMenu/tab/tab.module.css
@@ -1,15 +1,28 @@
+/* li {
+    width: 100%;
+} */
+
 .button {
-    width: 200px;
+    width: 100%;
+    height: 46px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    padding: 12px;
+    padding: 0px;
     gap: 8px;
-    border: 1px solid var(--additonal-stroke);
-    border-radius: 8px;
+    color: var(--additional-not-selected);
     cursor: pointer;
-    background-color: var(--color-white);
+}
+
+.button svg:first-child path {
+    fill: var(--additional-not-selected);
+    width: 20px;
+    aspect-ratio: 1 / 1;
+}
+
+.button svg:last-child path {
+    stroke: var(--additional-not-selected);
 }
 
 .name {
@@ -22,25 +35,17 @@
     flex-direction: column;
     gap: 4px;
     padding-top: 8px;
-}
-
-.checked {
-    border: none;
-    background-color: var(--main-color);
-    box-shadow: 0px 9px 28px 8px #0000000D,
-                0px 6px 16px 0px #00000014,
-                0px 3px 6px -4px #0000001F;
-
+    margin-left: 32px;
 }
 
 .checked svg:last-child path {
-    stroke: white;
+    stroke: var(--main-color);
 }
 
 .checked svg:first-child path {
-    fill: white;
+    fill: var(--main-color);
 }
 
 .checked .name {
-    color: white;
+    color: var(--main-color);
 }
