--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,7 @@
   --additonal-stroke: #E0E0E0;
   --color-secondary-normal: #2E4289;
   --system-background: #EAEEFD;
+  --system-background-pink: #FFE6EC;
   --text-h1-size: 32px; 
   --text-h1-height: 46px; 
   --text-h2-size: 24px; 
