--- a/src/components/teamsSummaryContainer/teamsSummaryContainer.module.css
+++ b/src/components/teamsSummaryContainer/teamsSummaryContainer.module.css
@@ -1,4 +1,4 @@
-.sumContainer {
+.container {
     width: 214px;
     padding: 24px;
     display: flex;
@@ -7,6 +7,7 @@
     gap: 4px;
     background-color: var(--color-white);
     border-radius: 12px;
+    height: 45px;
 }
 
 .number {
@@ -18,4 +19,16 @@
 .type {
     font-size: var(--text-b3-size);
     line-height: var(--text-b3-height);
+}
+
+.summary {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+}
+
+.margin {
+    margin-right: 12px;
 }
