--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,5 +1,6 @@
 .layout {
     background-color: var(--color-fill);
     padding-bottom: 60px;
-    height: max-content;
+    min-height: calc(100vh - 60px);
+    max-height: max-content;
 }
