updated team components

--- a/src/components/teamCard/teamCard.module.css
+++ b/src/components/teamCard/teamCard.module.css
@@ -12,7 +12,7 @@
     padding: 20px;
     font-size: var(--text-h3-size);
     line-height: var(--text-h3-height);
-    background-color: var(--system-background);
+    background-color: var(--system-warning-background);
 }
 
 .info {
