add teams backend data

--- a/src/components/charts/chartLayout/chartLayout.module.css
+++ b/src/components/charts/chartLayout/chartLayout.module.css
@@ -3,6 +3,7 @@
     background-color: var(--color-white);
     border-radius: 12px;
     width: min-content;
+    height: max-content;
 }
 
 .type {
