--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@
   --accent-normal: #E10D34;
   --additional-not-selected: #86878C;
   --additonal-stroke: #E0E0E0;
-  --color-secondary-normal: #2E4289;
+  --secondary-normal: #2E4289;
   --system-warning-background: #EAEEFD;
   --system-background-pink: #FFE6EC;
   --system-success-background: #E6F9EF;
