--- a/src/components/assistant/assistant.module.css
+++ b/src/components/assistant/assistant.module.css
@@ -71,7 +71,7 @@
 }
 
 .send {
-    background-color: var(--color-secondary-normal);
+    background-color: var(--secondary-normal);
     width: 56px;
     border-radius: 0 8px 8px 0;
 }
