--- a/src/components/employees/employeeAssessment/employeeAssessment.module.css
+++ b/src/components/employees/employeeAssessment/employeeAssessment.module.css
@@ -36,7 +36,7 @@
     align-items: center;
     padding: 12px 16px;
     background-color: var(--color-white);
-    width: 100%;
+    max-width: 1120px;;
     border-radius: 8px;
 }
 
