add Loading Spinner

--- a/src/pages/teams/teams-page.module.css
+++ b/src/pages/teams/teams-page.module.css
@@ -5,3 +5,9 @@
     flex-direction: row;
 }
 
+.spinner {
+    margin: 0 auto;
+    width: 50px;
+    aspect-ratio: 1 / 1;
+    margin-top: calc((100vh - 90px) / 2);
+}
