--- a/src/components/tabMenu/tabMenu.module.css
+++ b/src/components/tabMenu/tabMenu.module.css
@@ -11,3 +11,51 @@
     flex-direction: column;
     gap: 16px;
 }
+
+.button {
+    width: 100%;
+    height: 46px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0px;
+    gap: 8px;
+    color: var(--additional-not-selected);
+    cursor: pointer;
+}
+
+.button svg:first-child path {
+    fill: var(--additional-not-selected);
+    width: 20px;
+    aspect-ratio: 1 / 1;
+}
+
+.button svg:last-child path {
+    stroke: var(--additional-not-selected);
+}
+
+.name {
+    font-size: var(--text-b1-size);
+    line-height: var(--text-b1-height);
+}
+
+.items {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    padding-top: 8px;
+    margin-left: 32px;
+}
+
+.selected svg:last-child path {
+    stroke: var(--main-color);
+}
+
+.selected svg:first-child path {
+    fill: var(--main-color);
+}
+
+.selected .name {
+    color: var(--main-color);
+}
