update badge summary container in SelectedEmployeePage

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@
   --main-color: #42434B;
   --system-warning: #2F54EB;
   --system-error: #FF003F;
+  --system-orange: #FA8C16;
   --system-success: #00C261;
   --accent-normal: #E10D34;
   --additional-not-selected: #86878C;
