update badge summary container

--- a/src/pages/selectedTeamPage/selectedTeamPage.module.css
+++ b/src/pages/selectedTeamPage/selectedTeamPage.module.css
@@ -50,3 +50,15 @@
 .charts {
     width: 100%;
 }
+
+.orange circle {
+    fill: var(--system-orange);
+}
+
+.red circle {
+    fill: var(--system-error);
+}
+
+.green circle {
+    fill: var(--system-success);
+}
