--- a/src/components/employees/employeeAnalytics/employeeAnalytics.module.css
+++ b/src/components/employees/employeeAnalytics/employeeAnalytics.module.css
@@ -11,4 +11,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 24px;
+    height: max-content;
+}
+
+.graphic {
+    height: max-content;
 }
