--- a/src/components/charts/chartLayout/chartLayout.module.css
+++ b/src/components/charts/chartLayout/chartLayout.module.css
@@ -2,7 +2,7 @@
     padding: 24px;
     background-color: var(--color-white);
     border-radius: 12px;
-    width: min-content;
+    width: max-content;
     height: max-content;
 }
 
