--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,7 @@ body {
   margin: 0;
   color: var(--main-color);
   font-family: 'Manrope', sans-serif;
+  background-color: var(--color-fill);
 }
 
 input {
